--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-hooks-components-basics-lab",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
